methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:13: error: not found: value vuBiscuit
while(vuBiscuit == false){
      ^